# self-bootstrapping-model-service

./: .gitignore  README.md  pyproject.toml
test/: hello.trigger.py  main.py
